--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  "devDependencies":{
+  "devDependencies": {
     "nodemon": "^3.1.9"
   },
   "dependencies": {
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "libphonenumber-js": "^1.12.4",
     "mongoose": "^8.11.0",
+    "nodemailer": "^6.10.0",
     "rate-limiter-flexible": "^5.0.5",
     "resend": "^4.1.2",
     "source-map-support": "^0.5.21",
